add_subdirectory(AnalysisTree)
add_subdirectory(Calibrations)
add_subdirectory(ChargedTrackMultiplicity)
add_subdirectory(CosmicTagging)
add_subdirectory(Filters)
add_subdirectory(HitAnalysis)
add_subdirectory(LEEPhotonAnalysis)
add_subdirectory(LLApp)
add_subdirectory(MicroBooNEWireCell)
add_subdirectory(OpticalDetectorAna)
add_subdirectory(PatternFilter)
add_subdirectory(TPCNeutrinoIDFilter)
add_subdirectory(UBXSec)
add_subdirectory(LArSoftExamples)
add_subdirectory(HSNAnalysis)
add_subdirectory(XGBoost)
add_subdirectory(NCElastic)
add_subdirectory(ParticleID)
add_subdirectory(SinglePhotonAnalysis)
add_subdirectory(TreeReader)
add_subdirectory(Arborist)
add_subdirectory(searchingfornues)
add_subdirectory(NeutrinoML)

