set( IFDH_ART_DIR $ENV{IFDH_ART_DIR} )

add_subdirectory(HelephantFinder)
add_subdirectory(McTruthInformation)
add_subdirectory(GetPotCount)
add_subdirectory(FileLocationDatabase)
add_subdirectory(MinimalExample)
add_subdirectory(SingleParticleMomentumStudy)
add_subdirectory(QuickExplorer)
add_subdirectory(DirtStudy)
add_subdirectory(ValidateTriggerSliding)
#add_subdirectory(FakeRawDigits)
